--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@ class: center, middle, inverse, title-slide
 
 
 
+# The big questions
+
+&lt;br&gt;
+&lt;br&gt;
+
+## Is there (not) an effect of X on Y?
+
+## What is the effect of X on Y?
+
+## Given two or more hypotheses, which is the most compatible with the data?
+
+---
+
 class: center middle inverse
 
 # Practical reasons
@@ -44,13 +57,18 @@ class: center middle inverse
 
 # Frequentist LMER can lead to anti-conservative *p*-values
 
+.bg-washed-yellow.b--gold.ba.bw2.br3.shadow-5.ph4.mt5[
 **Heisig and Schaeffer 2019**
 
 - Not including random slopes increases the false-positive rate (Type I error rate).
+]
+
+.bg-washed-yellow.b--gold.ba.bw2.br3.shadow-5.ph4.mt5[
 
 **Lindley's paradox**
 
 - Frequentist model rejects `\(H_0\)` while Bayesian model favours it.
+]
 
 ---
 
@@ -92,9 +110,27 @@ class: center middle inverse
 
 # Bayesian inference is more intuitive than frequentist inference
 
-- The *p*-value is the probability of finding a certain difference or a bigger difference, assuming that there is no difference. 😱😱😱
+.bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt5[
 
-- A Bayesian posterior probability distribution tells you the probability that the estimated effect falls within a specific range of values.
+The ***p*-value** is the probability of finding a certain difference or a bigger difference, assuming that there is no difference. 😱😱😱
+
+]
+
+--
+
+.center[
+&lt;div style="width:400px;height:400px;position:relative;"&gt;&lt;iframe src="https://giphy.com/embed/xkQztEUp95DS8" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen&gt;&lt;/iframe&gt;&lt;/div&gt;
+]
+
+---
+
+# Bayesian inference is more intuitive than frequentist inference
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt5[
+
+A **Bayesian posterior probability distribution** tells you the probability that the estimated effect falls within a specific range of values.
+
+]
 
 ---
 
