--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@ class: center, middle, inverse, title-slide
 &lt;br&gt;
 &lt;br&gt;
 
-## Is there (not) an effect of X on Y?
+.f2[Is there (not) an effect of X on Y?]
 
 --
 
-## What is the effect of X on Y?
+&lt;br&gt;
+
+.f2[What is the effect of X on Y?]
 
 --
 
-## Given two or more hypotheses, which is the most compatible with the data?
+&lt;br&gt;
+
+.f2[Given two or more hypotheses, which is the most compatible with the data?]
 
 ---
 
@@ -49,7 +53,7 @@ class: center, middle, inverse, title-slide
 --
 
 .pull-left[
-## Frequentist
+## .orange[Frequentist]
 
 $$
 `\begin{aligned}
@@ -72,7 +76,7 @@ $$
 --
 
 .pull-right[
-## Bayesian
+## .green[Bayesian]
 
 $$
 `\begin{aligned}
@@ -87,7 +91,7 @@ $$
 # Statistical inference: two approaches to probability
 
 .pull-left[
-## Frequentist
+## .orange[Frequentist]
 
 &lt;br&gt;
 &lt;br&gt;
@@ -99,7 +103,7 @@ $$
 ]
 
 .pull-right[
-## Bayesian
+## .green[Bayesian]
 
 &lt;br&gt;
 &lt;br&gt;
@@ -115,7 +119,7 @@ $$
 # Statistical inference: two approaches to probability
 
 .pull-left[
-## Frequentist
+## .orange[Frequentist]
 
 &lt;br&gt;
 &lt;br&gt;
@@ -131,7 +135,7 @@ What is the probability of the data `\(d\)` assuming that the hypothesis `\(H_0\
 ]
 
 .pull-right[
-## Bayesian
+## .green[Bayesian]
 
 &lt;br&gt;
 &lt;br&gt;
@@ -188,11 +192,13 @@ The ***p*-value** is the probability of finding a certain difference or a bigger
 
 # Intuitiveness
 
-.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt5[
+.bg-washed-green.b--dark-green.ba.bw2.br2.shadow-5.ph2.mt3[
 
 A **Bayesian posterior probability distribution** tells you the probability that the estimated effect falls within a specific range of values.
 
 ]
+
+&lt;img src="index_files/figure-html/posterior-1.png" width="800px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -209,6 +215,8 @@ A **Bayesian posterior probability distribution** tells you the probability that
 ---
 
 # LMER is based on an imaginary set of experiments
+
+.center[![](img/imaginary.jpg)]
 
 ---
 
@@ -369,6 +377,8 @@ class: right middle inverse
 
 # *In Baiulo veritas*
 
+&lt;iframe src="https://seeing-theory.brown.edu/bayesian-inference/index.html#section3" style="border:none;" width="100%" height="100%"&gt;
+
 
 ---
 
@@ -403,6 +413,11 @@ class: right middle inverse
 * Reason 7: .green[BRMs] converge towards the true value in the long run, while .orange[LMERs] do not
 
 
+---
+
+class: center middle inverse
+
+# Questions?
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
